<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eleave</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loginbtn">Login</string>
    <string name="accountstr">EID:</string>
    <string name="passstr">Password:</string>
    <string name="main_home">Home</string> 
    <string name="main_apply">Apply</string> 
    <string name="main_exit">Exit1</string> 
    <string name="main_report">Report</string> 
    <string name="main_todo">Todo</string>
    <string name="leave_info">Leave Information</string>
    <string name="home_welcome">Welcome</string>
    <string name="main_style">" \n \nEleave，是一个请假方式\n \n "</string>
    
    <string-array name="leaveDayType">
        <item>Annual Leave</item>
        <item>Sick Leave</item>
        <item>Unpaid Leave of Absence</item>
        <item>Marriage Leave</item>
        <item>Maternity Leave</item>
        <item>Paternity Leave</item>
        <item>Compassionate Leave</item>
    </string-array>
    <string name="leaveDayType_prompt">Select a leave day type</string>
    
    <string-array name="leaveTime">
        <item>Whole Day</item>
        <item>Morning</item>
        <item>Afternoon</item>
    </string-array>
    <string name="leaveTime_prompt">Select a leave time </string>
    <string name="main_">TODO</string>

</resources>
